optional key deregistration

--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -675,6 +675,13 @@
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Byron-era wallet",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
+  "wallet.transfer.deregister.deregister": "Deregister",
+  "wallet.transfer.deregister.keep": "Keep registered",
+  "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister your staking key",
+  "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
+  "wallet.transfer.deregister.line3": "Keeping your staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Any ADA claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "You do NOT need to undelegate before switching stake pools",
   "wallet.undelegation.transaction.explanationLine2": "It will take 2 epochs after the end of the current epoch for undelegation to take effect",
