--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -482,6 +482,8 @@
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
   "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Necessary permissions were not granted by the user. Please retry.",
+  "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
+  "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Operation cancelled on Ledger device.",
   "wallet.hw.ledger.common.error.102": "Operation cancelled by user.",
   "wallet.hw.ledger.common.error.103": "Ledger device is locked, please unlock it and retry.",
