Add Ledger upgrade dialog

--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "Invalid phrase entered, please check.",
   "api.errors.invalidWitnessError": "The signature is invalid.",
   "api.errors.noInputsError": "The wallet restored from your recovery phrase is empty. Please check your recovery phrase and attempt restoration again.",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "Error while updating pending transactions.",
   "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Rollback was detected.",
@@ -301,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "Recovered balance",
   "transfer.summary.transactionFee.label": "Transaction fees",
   "transfer.summary.transferButton.label": "Transfer Funds",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL successfully copied",
   "uri.display.dialog.title": "Generated URL",
   "uri.display.dialog.usabilityWarning": "This link can only be opened by users with Yoroi installed on their browser",
